# pager

./: .gitignore  README.md  style.css
.github/workflows/: deploy-backend-render.yml  deploy-backend.yml  deploy.yml
client/: index.html  manifest.js  manifest.json  script.js  style.css  sw.js
server/: Cargo.toml  main.rs
server/src/: main.rs
