[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
web-push-native = "0.4"
reqwest = { version = "0.12", features = ["json"] }
p256 = { version = "0.13", features = ["jwk"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "normalize-path"] }
rustls-acme = { version = "0.13", features = ["axum"] }
tokio-stream = "0.1"
hyper = "1.0"
tower = "0.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.21"
base64ct = "1.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }